--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,7 @@
 
                         {{ render_nav_item('simple_pages.about','About') }}
                         {{ render_nav_item('simple_pages.welcome','Welcome') }}
+                        {{ render_nav_item('simple_pages.OOPs','OOPs') }}
                     </div>
                 </div>
                 <div class="navbar-nav d-flex">
