--- a/app/simple_pages/templates/OOPs.html
+++ b/app/simple_pages/templates/OOPs.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 <article>{% block content %}
     <h1>OOPs</h1>
+    <h2>Basics</h2>
+    <h3><strong>Object-Oriented Programming (OOP):</strong> An approach to designing and building applications that are flexible, natural, well-crafted, and testable by focusing on objects that interact cleanly with one another.</h3>
 {% endblock %}
 </article>
