--- a/app/simple_pages/templates/OOPs.html
+++ b/app/simple_pages/templates/OOPs.html
@@ -2,6 +2,7 @@
 <article>{% block content %}
     <h1>OOPs</h1>
     <h2>Basics</h2>
-    <h3><strong>Object-Oriented Programming (OOP):</strong> An approach to designing and building applications that are flexible, natural, well-crafted, and testable by focusing on objects that interact cleanly with one another.</h3>
+    <p><strong>Object-Oriented Programming (OOP):</strong> An approach to designing and building applications that are flexible, natural, well-crafted, and testable by focusing on objects that interact cleanly with one another.</p>
+    <p><strong>Class:</strong> The code describing a particular entity in the application, such as Customer, Order, or Address. The class contains the code defining the properties and methods (see below).</p>
 {% endblock %}
 </article>
