--- a/app/simple_pages/templates/OOPs.html
+++ b/app/simple_pages/templates/OOPs.html
@@ -4,5 +4,21 @@
     <h2>Basics</h2>
     <p><strong>Object-Oriented Programming (OOP):</strong> An approach to designing and building applications that are flexible, natural, well-crafted, and testable by focusing on objects that interact cleanly with one another.</p>
     <p><strong>Class:</strong> The code describing a particular entity in the application, such as Customer, Order, or Address. The class contains the code defining the properties and methods (see below).</p>
+    <p><strong>Method:</strong> The code defining the actions or behaviors of the class, such as Validate or CalculateTotal. Methods are defined in the code with C# functions.</p>
+    <p><strong>Members:</strong> Refers to the properties and methods for a class.</p>
+    <p><strong>Object:</strong> An instance of a class that is created at runtime. In C#, an instance is created with the new keyword.</p>
+    <p><strong>Object Variable: </strong> The variable used when creating an object. For example, var myCustomer = new Customer(); In this example, myCustomer is the object variable. Use the object variable to set the properties and call the methods. The object variable retains the state of the object.
+    <p><strong>Method signature:</strong>The code defining the method function including the function name and the set of parameters. The signature does not include the return type. Every function signature within a class must be unique. The signature is used to “match up” calls to the function.</p>
+    <p><strong>Overloading:</strong>Methods that have the same name but different parameters. Example: public bool Retrieve() and public bool Retrieve(int id). The Retrieve method in this example is said to have “two overloads”.</p>
+    <p><strong>Contract: </strong>The set of public properties and methods in a class define the classes contract. The class makes a promise that it will provide the defined properties and methods to any other code that needs them. This is also known as the <strong>“class interface“.</strong></p>
+    <p><strong>Constructor:</strong>Code that is executed each time an instance of the class is created.</p>
+    <p><strong>Default Constructor:</strong> A constructor with no parameters.</p>
+    <p><strong>Overriding: </strong> When using inheritance (see below), a child class can override a member of the parent class to provide its own implementation.</p>
+    <p><strong></strong></p>
+    <p><strong></strong></p>
+    <p><strong></strong></p>
+
+
+
 {% endblock %}
 </article>
