--- a/app/simple_pages/templates/OOPs.html
+++ b/app/simple_pages/templates/OOPs.html
@@ -14,10 +14,19 @@
     <p><strong>Constructor:</strong>Code that is executed each time an instance of the class is created.</p>
     <p><strong>Default Constructor:</strong> A constructor with no parameters.</p>
     <p><strong>Overriding: </strong> When using inheritance (see below), a child class can override a member of the parent class to provide its own implementation.</p>
-    <p><strong></strong></p>
-    <p><strong></strong></p>
-    <p><strong></strong></p>
+    <p><strong>Interface:</strong> An explicit interface is a separate type (INotifyPropertyChanged for example) that defines a set of properties and methods with no implementation. Any class can then implement an interface to use the set of properties and methods provided in the interface. Think of an interface as a role that an object can play. For example, an ILoggable interface defines a logging role. An IEmail interface defines an emailing role. An Order class may implement both the ILoggable and IEmail interface to take on both roles. An Address class may implement only the ILoggable interface.</p>
+    <h2>Four Pillars of Object-Oriented Programming</h2>
+    <p>The pillars of OOP define the key characteristics of object-oriented programming and are:</p>
+    <p><strong>Abstraction: </strong> The process of defining classes by simplifying reality, ignoring extraneous details, and focusing on what is important for a purpose. For example, a customer may have a name, title, address, marital status, pets, children, credit card information, vehicles, etc. But if the purpose of the application is to process orders, the application may only care about the customer’s name, address, and credit card information.</p>
+    <p><strong>Encapsulation:</strong>A way to hide (or encapsulate) the data and implementation details within a class, thus hiding complexity. In C#, data elements are defined with private backing fields and exposed through property getters and setters. So the data is encapsulated.</p>
+    <p><strong>Inheritance:</strong> A relationship between classes whereby child (or derived) classes inherit all of the members of the parent (or base) class. For example, an application may define a “business object base” class that all business objects inherit from. This base class can contain members common to all child classes, such as entity state information.</p>
+    <p><strong>Polymorphism:</strong>Basically “many forms”. The concept that a single method can behave differently depending on the type of object that calls it. For example, the Validate method in Customer class performs differently from the Validate method in the Order class.</p>
+    <p><strong>Inheritance-Based Polymorphism:</strong> Polymorphism in the case where the method is defined in a base class and behaves differently for each child class.</p>
+    <p><strong>Interface-Based Polymorphism:</strong>Polymorphism in the case where the method is defined in an interface and behaves differently in each class that implements the interface.</p>
+    <h1 style="color:grey;">Class Relationships</h1>
 
+    <p><strong>Collaboration:</strong> “Uses a” relationship. Objects can collaborate with other objects. For example: Customer Repository “uses a” Customer object to populate on a retrieve and serialize on a save.</p>
+    <p><strong></strong></p>
 
 
 {% endblock %}
