--- a/app/simple_pages/templates/welcome.html
+++ b/app/simple_pages/templates/welcome.html
@@ -3,6 +3,7 @@
     <div class="row">
         <article class="col-12">
             <h1>Welcome</h1>
+            <h2>To my website</h2>
         </article>
     </div>
 {% endblock %}
