--- a/app/simple_pages/templates/AAA Testing.html
+++ b/app/simple_pages/templates/AAA Testing.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-<article>{% block content %}
-    <h1>AAA Testing</h1>
-    <h2><strong>ARRANGE-ACT-ASSERT: A PATTERN FOR WRITING GOOD TESTS</strong></h2>
+{% block content %}
+    <div class="row">
+        <article class="col-12">
+            <h1>AAA Testing</h1>
+            <h2>To my website</h2>
+        </article>
+    </div>
 {% endblock %}
 </article>
 
