--- a/app/simple_pages/templates/AAA_Testing.html
+++ b/app/simple_pages/templates/AAA_Testing.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 <article>{% block content %}
     <h1>AAA Testing</h1>
+    <h2><strong>ARRANGE-ACT-ASSERT: A PATTERN FOR WRITING GOOD TESTS</strong></h2>
 {% endblock %}
 </article>
