--- a/app/simple_pages/templates/AAA_Testing.html
+++ b/app/simple_pages/templates/AAA_Testing.html
@@ -2,5 +2,7 @@
 <article>{% block content %}
     <h1>AAA Testing</h1>
     <h2><strong>ARRANGE-ACT-ASSERT: A PATTERN FOR WRITING GOOD TESTS</strong></h2>
+    <p>A test is a procedure that exercises a behavior to determine if the behavior functions correctly. There are several different kinds of tests, like unit tests, integration tests, or end-to-end tests, but all functional tests do the same basic thing: they try something and report PASS or FAIL.</p>
+    <p><p style="color:red;">Testing</p>provides an empirical feedback loop for development. That’s how testing keeps us safe. With tests, we know when things break. Without tests, coding can be dangerous. We don’t want to deploy big ol’ bugs!</p>
 {% endblock %}
 </article>
