--- a/app/simple_pages/templates/AAA_Testing.html
+++ b/app/simple_pages/templates/AAA_Testing.html
@@ -3,6 +3,18 @@
     <h1>AAA Testing</h1>
     <h2><strong>ARRANGE-ACT-ASSERT: A PATTERN FOR WRITING GOOD TESTS</strong></h2>
     <p>A test is a procedure that exercises a behavior to determine if the behavior functions correctly. There are several different kinds of tests, like unit tests, integration tests, or end-to-end tests, but all functional tests do the same basic thing: they try something and report PASS or FAIL.</p>
-    <p><p style="color:red;">Testing</p>provides an empirical feedback loop for development. That’s how testing keeps us safe. With tests, we know when things break. Without tests, coding can be dangerous. We don’t want to deploy big ol’ bugs!</p>
+    <p><i>Testing</i>provides an empirical feedback loop for development. That’s how testing keeps us safe. With tests, we know when things break. Without tests, coding can be dangerous. We don’t want to deploy big ol’ bugs!</p>
+    <p>So, if we intend to spend time writing tests, how can we write good tests? There’s a simple but powerful pattern I like to follow: <strong>Arrange-Act-Assert.</strong></p>
+    <h2>The Pattern</h2>
+    <p><i>Arrange-Act-Assert</i> is a great way to structure test cases. It prescribes an order of operations:</p>
+    <ol>
+        <li><strong>Arrange</strong> inputs and targets. Arrange steps should set up the test case. Does the test require any objects or special settings? Does it need to prep a database? Does it need to log into a web app? Handle all of these operations at the start of the test.</li>
+        <li><strong>Act</strong> on the target behavior. Act steps should cover the main thing to be tested. This could be calling a function or method, calling a REST API, or interacting with a web page. Keep actions focused on the target behavior.</li>
+        <li><strong>Assert</strong> expected outcomes. Act steps should elicit some sort of response. Assert steps verify the goodness or badness of that response. Sometimes, assertions are as simple as checking numeric or string values. Other times, they may require checking multiple facets of a system. Assertions will ultimately determine if the test passes or fails.</li>
+    </ol>
+    <p>Behavior-Driven Development follows the <i>Arrange-Act-Assert</i> pattern by another name: <strong><i>Given-When-Then.</i></strong> The Gherkin language uses <i>Given-When-Then</i> steps to specify behaviors in scenarios. <i>Given-When-Then</i> is essentially the same formula as <i>Arrange-Act-Assert.</i></p>
+    <p>Every major programming language has at least one test framework. Frameworks like JUnit, NUnit, Cucumber, and (my favorite) pytest enable you, as the programmer, to automate tests, execute suites, and report results. However, the framework itself doesn’t make a test case “good” or “bad.” You, as the tester, must know how to write good tests!</p>
+    <p>Let’s look at how to apply the Arrange-Act-Assert pattern in Python code. I’ll use pytest for demonstration.</p>
+
 {% endblock %}
 </article>
