--- a/app/simple_pages/templates/AAA_Testing.html
+++ b/app/simple_pages/templates/AAA_Testing.html
@@ -15,6 +15,9 @@
     <p>Behavior-Driven Development follows the <i>Arrange-Act-Assert</i> pattern by another name: <strong><i>Given-When-Then.</i></strong> The Gherkin language uses <i>Given-When-Then</i> steps to specify behaviors in scenarios. <i>Given-When-Then</i> is essentially the same formula as <i>Arrange-Act-Assert.</i></p>
     <p>Every major programming language has at least one test framework. Frameworks like JUnit, NUnit, Cucumber, and (my favorite) pytest enable you, as the programmer, to automate tests, execute suites, and report results. However, the framework itself doesn’t make a test case “good” or “bad.” You, as the tester, must know how to write good tests!</p>
     <p>Let’s look at how to apply the Arrange-Act-Assert pattern in Python code. I’ll use pytest for demonstration.</p>
-
+    <h2>Unit Testing</h2>
+    <p>Here’s a basic unit test for Python’s absolute value function:</p>
+    <img src="app/static/images/abs.png" alt="Codes" width="460" height="345">
+    <p>This test may seem trivial, but we can use it to illustrate our pattern. I like to write comments denoting each phase of the test case as well.</p>
 {% endblock %}
 </article>
