--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,8 @@
 body {
 font-size: 200%;
-img {width:50%; height:auto}
+}
+img {
+    width: 80%;
+    max-width: 80%;
+    height: auto; // or vice versa, depends on what you need
 }
