--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,5 +4,5 @@ font-size: 200%;
 img {
     width: 80%;
     max-width: 80%;
-    height: auto; // or vice versa, depends on what you need
+    height: auto;
 }
