--- a/app/simple_pages/templates/AAA_Testing.html
+++ b/app/simple_pages/templates/AAA_Testing.html
@@ -17,7 +17,7 @@
     <p>Let’s look at how to apply the Arrange-Act-Assert pattern in Python code. I’ll use pytest for demonstration.</p>
     <h2>Unit Testing</h2>
     <p>Here’s a basic unit test for Python’s absolute value function:</p>
-    <img src="../../static/images/abs.png" alt="Codes" width="300" height="300">
+    <img src="../../static/images/absv.png" alt="Codes" width="300" height="300">
     <p>This test may seem trivial, but we can use it to illustrate our pattern. I like to write comments denoting each phase of the test case as well.</p>
 {% endblock %}
 </article>
