last commit on AAA

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,7 @@
                         {{ render_nav_item('simple_pages.welcome','Welcome') }}
                         {{ render_nav_item('simple_pages.AAA_Testing','AAA_Testing') }}
                         {{ render_nav_item('simple_pages.OOPs','OOPs') }}
+                        {{ render_nav_item('simple_pages.SOLID','SOLID') }}
                     </div>
                 </div>
                 <div class="navbar-nav d-flex">
