last commit on AAA

--- a/app/simple_pages/templates/SOLID.html
+++ b/app/simple_pages/templates/SOLID.html
@@ -14,6 +14,7 @@
     <p>So we simply split the class, we create another class that will handle the one responsibility of storing an user to a database:</p>
     <img src="../../static/images/SOLIDs2.png" alt="Codes2" width="350" height="450">
     <p>A common solution to this dilemma is to apply the Façade pattern. User class will be the Facade for user database management and user properties management.</p>
+    <h2><strong>2.Open-Closed Principle</strong></h2>
     <p></p>
 
 
