last commit on AAA

--- a/app/simple_pages/templates/SOLID.html
+++ b/app/simple_pages/templates/SOLID.html
@@ -21,7 +21,7 @@
     <p>No, this fails the OCP principle. OCP forbids it. If we want to give a new percent discount maybe, to a different type of customers, you will see that a new logic will be added. To make it follow the OCP principle, we will add a new class that will extend the Discount. In this new class, we would implement its new behavior:</p>
     <img src="../../static/images/SOLIDs4.png" alt="Codes4" width="350" height="550">
     <p>If you decide 80% discount to super VIP customers, it should be like this:</p>
-    <p>Extension without modification.</p>
+    <h2 style="color:red;">Extension without modification.</h2>
     <p></p>
     <p></p>
     <p></p>
