--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
                         {% endif %}
 
                         {{ render_nav_item('simple_pages.welcome','Welcome') }}
+                        {{ render_nav_item('simple_pages.PyLint','PyLint') }}
                         {{ render_nav_item('simple_pages.AAA_Testing','AAA_Testing') }}
                         {{ render_nav_item('simple_pages.OOPs','OOPs') }}
                         {{ render_nav_item('simple_pages.SOLID','SOLID') }}
