--- a/app/simple_pages/templates/pylint.html
+++ b/app/simple_pages/templates/pylint.html
@@ -12,6 +12,7 @@
         <li>Checking that variable names are well-formed according to the project's coding standard</li>
         <li>Checking that declared interfaces are truly implemented</li>
     </ul>
+    <img src="../../static/images/pylint.jpg" alt="PyLint" width="350" height="450">
     <h2><strong>Specifications and Features of Pylint</strong></h2>
     <p>Pylint tool has classy as features described below:</p>
     <p style="color:blue;">Features: Description</p>
