--- a/app/simple_pages/templates/welcome.html
+++ b/app/simple_pages/templates/welcome.html
@@ -2,77 +2,36 @@
 {% block content %}
     <div class="row">
         <article class="col-12">
-            <h1>Welcome</h1>
-            <h2>To my website</h2>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="../../static/images/Docker-Symbol.png" style="width:100%" height="350">
-  <div class="text">Docker</div>
+            <h1>Welcome to my Project 2</h1>
+            <h2>Learn about PyLint, AAA testing, OOPs, and SOLID</h2>
+<div class="row">
+  <div class="column">
+    <img src="../../static/images/computer.jpg">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+  <div class="column">
+    <img src="../../static/images/heroku.png">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+  <div class="column">
+    <img src="../../static/images/pytest.png">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
 </div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="../../static/images/github.png" style="width:100%" height="350">
-  <div class="text">Git</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="../../static/images/PyCharm.png" style="width:100%" height="400">
-  <div class="text">PyCharm</div>
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">❮</a>
-<a class="next" onclick="plusSlides(1)">❯</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-
-<script>
-let slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
-</script>
-
-</body>
 </html>
-        </article>
-    </div>
 {% endblock %}
 </article>
