--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -3,7 +3,7 @@
     <div class="row">
         <article class="col-8 lh-lg fs-5">
 
-            <h1>Index Page</h1>
+            <h1>Home</h1>
         </article>
         {% if current_user.is_authenticated == false %}
             <aside class="col-4">
@@ -18,6 +18,7 @@
                 </form>
             </aside>
         {% endif %}
+    <h2><strong>PAGE UNDER DEVELOPMENT FOR PROJECT 3</strong></h2>
 
     </div>
 {% endblock %}
